--- a/app/src/main/res/layout/fragment_coord_workflow_prism4d.xml
+++ b/app/src/main/res/layout/fragment_coord_workflow_prism4d.xml
@@ -630,7 +630,7 @@
                             android:text="@string/mean_lat_sigma"
                             android:layout_height="wrap_content"
                             android:layout_width="0dp"
-                            android:layout_weight="25"
+                            android:layout_weight="15"
                             android:gravity="end"
 
                             android:textColor="@color/colorTextBlack"
@@ -653,7 +653,7 @@
 
                             android:layout_height="wrap_content"
                             android:layout_width="0dp"
-                            android:layout_weight="25"
+                            android:layout_weight="15"
                             android:gravity="end"
 
                             android:textColor="@color/colorTextBlack"
@@ -678,7 +678,7 @@
                             android:text="@string/mean_elev_sigma"
                             android:layout_height="wrap_content"
                             android:layout_width="0dp"
-                            android:layout_weight="25"
+                            android:layout_weight="15"
                             android:gravity="end"
 
                             android:textColor="@color/colorTextBlack"
@@ -692,23 +692,85 @@
                             android:layout_weight="25"
                             android:gravity="center"
 
+                            android:layout_marginEnd="16dp"
+
                             android:textColor="@color/colorTextBlack"
                             android:background="@color/colorWhite"
                             />
-                        <!-- Vector Standard Deviation -->
+
+
+                    </LinearLayout>
+
+                    <!-- Standard Deviations -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="10dp"
+
+                        >
+                        <!-- Lat Sigma -->
                         <TextView
-                            android:text="@string/mean_vector_sigma"
+                            android:text="@string/mean_lat_sigma"
                             android:layout_height="wrap_content"
                             android:layout_width="0dp"
-                            android:layout_weight="25"
+                            android:layout_weight="15"
                             android:gravity="end"
 
                             android:textColor="@color/colorTextBlack"
                             android:background="@color/colorScreenBackground"
                             />
                         <TextView
-                            android:id="@+id/meanWgs84VectorStdDevOutput"
-                            android:hint="@string/mean_vector_sigma"
+                            android:id="@+id/meanWgs84LatSigmaOutput2"
+                            android:hint="@string/mean_lat_sigma"
+                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="25"
+                            android:gravity="center"
+
+                            android:textColor="@color/colorTextBlack"
+                            android:background="@color/colorWhite"
+                            />
+                        <!-- Long Sigma -->
+                        <TextView
+                            android:text="@string/mean_long_sigma"
+
+                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="15"
+                            android:gravity="end"
+
+                            android:textColor="@color/colorTextBlack"
+                            android:background="@color/colorScreenBackground"
+                            />
+                        <TextView
+                            android:id="@+id/meanWgs84LongSigmaOutput2"
+                            android:hint="@string/mean_long_sigma"
+
+                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="25"
+                            android:gravity="center"
+
+                            android:layout_marginEnd="6dp"
+
+                            android:textColor="@color/colorTextBlack"
+                            android:background="@color/colorWhite"
+                            />
+                        <!-- Elevation Sigma -->
+                        <TextView
+                            android:text="@string/mean_elev_sigma"
+                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="15"
+                            android:gravity="end"
+
+                            android:textColor="@color/colorTextBlack"
+                            android:background="@color/colorScreenBackground"
+                            />
+                        <TextView
+                            android:id="@+id/meanWgs84ElevSigmaOutput2"
+                            android:hint="@string/mean_elev_sigma"
                             android:layout_height="wrap_content"
                             android:layout_width="0dp"
                             android:layout_weight="25"
@@ -719,6 +781,7 @@
                             android:textColor="@color/colorTextBlack"
                             android:background="@color/colorWhite"
                             />
+
 
                     </LinearLayout>
 
@@ -793,6 +856,89 @@
                         <!-- seconds -->
                         <TextView
                             android:id="@+id/meanWgs84LatSecondsInput"
+                            android:hint="@string/type_seconds_label"
+
+                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="25"
+                            android:gravity="center"
+
+                            android:layout_marginStart="6dp"
+                            android:layout_marginEnd="16dp"
+
+                            android:textColor="@color/colorTextBlack"
+                            android:background="@color/colorWhite"
+                            />
+
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="10dp"
+
+                        >
+                        <!-- Latitude Label -->
+                        <TextView
+                            android:text="@string/latitude_label"
+                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="25"
+                            android:gravity="end"
+
+                            android:textColor="@color/colorTextBlack"
+                            android:background="@color/colorScreenBackground"
+                            />
+                        <!-- Decimal Degrees -->
+                        <TextView
+                            android:id="@+id/meanWgs84LatitudeInput2"
+                            android:hint="@string/type_decimal_degrees_label"
+
+                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="75"
+                            android:gravity="center"
+
+                            android:layout_marginEnd="16dp"
+
+                            android:textColor="@color/colorTextBlack"
+                            android:background="@color/colorWhite"
+                            />
+                        <!-- degrees -->
+                        <TextView
+                            android:id="@+id/meanWgs84LatDegreesInput2"
+                            android:hint="@string/type_degrees_label"
+                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="25"
+                            android:gravity="center"
+
+                            android:layout_marginStart="6dp"
+                            android:layout_marginEnd="6dp"
+
+                            android:textColor="@color/colorTextBlack"
+                            android:background="@color/colorWhite"
+                            />
+                        <!-- minutes -->
+                        <TextView
+                            android:id="@+id/meanWgs84LatMinutesInput2"
+                            android:hint="@string/type_minutes_label"
+
+                            android:layout_height="wrap_content"
+                            android:layout_width="0dp"
+                            android:layout_weight="25"
+                            android:gravity="center"
+
+                            android:layout_marginStart="6dp"
+                            android:layout_marginEnd="6dp"
+
+                            android:textColor="@color/colorTextBlack"
+                            android:background="@color/colorWhite"
+                            />
+                        <!-- seconds -->
+                        <TextView
+                            android:id="@+id/meanWgs84LatSecondsInput2"
                             android:hint="@string/type_seconds_label"
 
                             android:layout_height="wrap_content"
