--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="colorGrayButton">#dcdcdc</color>
     <color name="colorGreenButton">#A4C639</color>
     <color name="colorRedButton">#FF0000</color>
+    <color name="colorYellowButton">#FFFF66</color>
 
 
     <color name="colorTextBlack">#000000</color>
